tests/ui/error-codes/E0405.stderr
error[E0405]: cannot find trait `SomeTrait` in this scope
  --> $DIR/E0405.rs:3:6
   |
LL | impl SomeTrait for Foo {}
   |      ^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0405`.
