tests/ui/error-codes/E0405.rs
struct Foo;

impl SomeTrait for Foo {} //~ ERROR E0405

fn main() {
}
